[minor] sample csp header application and a minor spacing fix on the cps implementation

--- a/samples/poc-subappv1-csp/src/server/critical.css
+++ b/samples/poc-subappv1-csp/src/server/critical.css
@@ -1,3 +1,3 @@
 .header {
-    color: green;
+    color: #0772ba;
 }
